fix: change contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 
 @layer base {
   ::selection {
-    @apply bg-tabi text-stone-900;
+    @apply bg-tabi text-stone-100;
   }
 
   body {
@@ -30,7 +30,7 @@
   }
 
   a {
-    @apply text-tabi hover:bg-tabi px-1 hover:text-stone-800;
+    @apply text-tabi hover:bg-tabi px-1 font-bold hover:text-stone-100;
   }
 
   a:has(> img, > svg) {
@@ -49,5 +49,12 @@
 @layer utilities {
   .min-h-mobile {
     min-height: 90vh;
+  }
+
+  .btn {
+    @apply rounded-lg px-2 py-1;
+    @apply transition-all hover:bg-transparent;
+    @apply border-tabi border-2;
+    @apply shadow-tabi hover:shadow-md;
   }
 }
